--- a/index.html
+++ b/index.html
@@ -4,9 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LandiingPage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="body">
+
+
+        <div class="header">
+            <div class="logo"><img src="temp.jpg"></div>
+
+            <ul class="headerlinks">
+                <li><a href="#">link</a></li>
+                <li><a href="#">link</a></li>
+                <li><a href="#">link</a></li>
+            </ul>
+
+        </div>
+
+        <div class="topcontainer">
+            <div class="lefttopcontainer">
+                <div class="text">This website is awsome</div>
+                <div class="text">Some text to make a desc temp</div>
+                <button class="Signup">Sign Up</button>
+            </div>
+
+            <div class="righttopcontainer">
+                <img src="temp.jpg">
+            </div>
+        </div>
+
+        <div class="cards">
+            Rando info
+            <div class="card1"><img src="temp.jpg">Placeholdertext</div>
+            <div class="text">Placehodler text</div>
+
+            <div class="card2"><img src="temp.jpg">Placeholdertext</div>
+            <div class="text">Placehodler text</div>
+
+            <div class="card3"><img src="temp.jpg"> Placeholdertext</div>
+            <div class="text">Placehodler text</div>
+
+
+            <div class="card4"><img src="temp.jpg">Placeholdertext</div>
+            <div class="text">Placehodler text</div>
+
+        </div>
+
+        <div class="quote">
+            <div class="text">
+                placeholder text for quatoe
+            </div>
+        </div>
+
+        <div class="footer">
+            Copyright © Swearfy 2022
+        </div>
+    </div>
 </body>
 </html>
