--- a/index.html
+++ b/index.html
@@ -1,65 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LandiingPage</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="body">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="topheader">
+        <div class="logo">Header Logo Text</div>
 
+        <ul class="headerlinks">
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+          <li><a href="#">link</a></li>
+        </ul>
+      </div>
 
-        <div class="header">
-            <div class="logo"><img src="temp.jpg"></div>
+      <div class="bottomheader">
+        <div class="bottomleftheader">
+          <div class="heromain">This website is awsome</div>
+          <div class="herosecond">Some text to make a desc temp</div>
+          <button class="signup">Sign Up</button>
+        </div>
+        <img class="mainimg" src="./img/wx78.jpg" />
+      </div>
+    </header>
 
-            <ul class="headerlinks">
-                <li><a href="#">link</a></li>
-                <li><a href="#">link</a></li>
-                <li><a href="#">link</a></li>
-            </ul>
-
+    <div class="cardscontainer">
+      Rando info
+      <div class="cards">
+        <div class="card1">
+          <img src="temp.jpg" />
+          <div class="text">Placehodler text</div>
         </div>
 
-        <div class="topcontainer">
-            <div class="lefttopcontainer">
-                <div class="text">This website is awsome</div>
-                <div class="text">Some text to make a desc temp</div>
-                <button class="Signup">Sign Up</button>
-            </div>
-
-            <div class="righttopcontainer">
-                <img src="temp.jpg">
-            </div>
+        <div class="card2">
+          <img src="temp.jpg" />
+          <div class="text">Placehodler text</div>
         </div>
 
-        <div class="cards">
-            Rando info
-            <div class="card1"><img src="temp.jpg">Placeholdertext</div>
-            <div class="text">Placehodler text</div>
-
-            <div class="card2"><img src="temp.jpg">Placeholdertext</div>
-            <div class="text">Placehodler text</div>
-
-            <div class="card3"><img src="temp.jpg"> Placeholdertext</div>
-            <div class="text">Placehodler text</div>
-
-
-            <div class="card4"><img src="temp.jpg">Placeholdertext</div>
-            <div class="text">Placehodler text</div>
-
+        <div class="card3">
+          <img src="temp.jpg" />
+          <div class="text">Placehodler text</div>
         </div>
 
-        <div class="quote">
-            <div class="text">
-                placeholder text for quatoe
-            </div>
+        <div class="card4">
+          <img src="temp.jpg" />
+          <div class="text">Placehodler text</div>
         </div>
-
-        <div class="footer">
-            Copyright © Swearfy 2022
-        </div>
+      </div>
     </div>
-</body>
+
+    <div class="quote">
+      <div class="text">placeholder text for quatoe</div>
+    </div>
+
+    <div class="bottomcontainer">
+      <div class="text">Call to Action!</div>
+      <div class="text">Desc</div>
+
+      <button class="SignUp2">Sign Up</button>
+    </div>
+
+    <footer>Copyright © Swearfy 2022</footer>
+  </body>
 </html>
