finished but broken

--- a/index.html
+++ b/index.html
@@ -8,63 +8,65 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <div class="topheader">
-        <div class="logo">Header Logo Text</div>
+    <div class="body">
+      <header>
+        <div class="topheader">
+          <div class="logo">Header Logo Text</div>
 
-        <ul class="headerlinks">
-          <li><a href="#">link</a></li>
-          <li><a href="#">link</a></li>
-          <li><a href="#">link</a></li>
-        </ul>
+          <ul class="headerlinks">
+            <li><a href="#">link</a></li>
+            <li><a href="#">link</a></li>
+            <li><a href="#">link</a></li>
+          </ul>
+        </div>
+
+        <div class="bottomheader">
+          <div class="bottomleftheader">
+            <div class="heromain">This website is awsome</div>
+            <div class="herosecond">Some text to make a desc temp</div>
+            <button class="signup">Sign Up</button>
+          </div>
+          <img class="mainimg" src="./img/wx78.jpg" />
+        </div>
+      </header>
+
+      <div class="cardscontainer">
+        Rando info
+        <div class="cards">
+          <div class="card1">
+            <img src="./img/wx78.jpg" />
+            <div class="text">Placehodler text</div>
+          </div>
+
+          <div class="card2">
+            <img src="./img/wx78.jpg" />
+            <div class="text">Placehodler text</div>
+          </div>
+
+          <div class="card3">
+            <img src="./img/wx78.jpg" />
+            <div class="text">Placehodler text</div>
+          </div>
+
+          <div class="card4">
+            <img src="./img/wx78.jpg" />
+            <div class="text">Placehodler text</div>
+          </div>
+        </div>
       </div>
 
-      <div class="bottomheader">
-        <div class="bottomleftheader">
-          <div class="heromain">This website is awsome</div>
-          <div class="herosecond">Some text to make a desc temp</div>
-          <button class="signup">Sign Up</button>
-        </div>
-        <img class="mainimg" src="./img/wx78.jpg" />
+      <div class="quote">
+        <div class="text">placeholder text for quatoe</div>
       </div>
-    </header>
 
-    <div class="cardscontainer">
-      Rando info
-      <div class="cards">
-        <div class="card1">
-          <img src="temp.jpg" />
-          <div class="text">Placehodler text</div>
+      <div class="bottomcontainer">
+        <div>
+          <div class="text">Call to Action!</div>
+          <div class="text">Desc</div>
         </div>
-
-        <div class="card2">
-          <img src="temp.jpg" />
-          <div class="text">Placehodler text</div>
-        </div>
-
-        <div class="card3">
-          <img src="temp.jpg" />
-          <div class="text">Placehodler text</div>
-        </div>
-
-        <div class="card4">
-          <img src="temp.jpg" />
-          <div class="text">Placehodler text</div>
-        </div>
+        <button class="signup2">Sign Up</button>
       </div>
     </div>
-
-    <div class="quote">
-      <div class="text">placeholder text for quatoe</div>
-    </div>
-
-    <div class="bottomcontainer">
-      <div class="text">Call to Action!</div>
-      <div class="text">Desc</div>
-
-      <button class="SignUp2">Sign Up</button>
-    </div>
-
     <footer>Copyright © Swearfy 2022</footer>
   </body>
 </html>
