--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
         Rando info
         <div class="cards">
           <div class="card1">
-            <img src="./img/wx78.jpg" />
+            <img class="cardimg" src="./img/wx78.jpg" />
             <div class="text">Placehodler text</div>
           </div>
 
           <div class="card2">
-            <img src="./img/wx78.jpg" />
+            <img class="cardimg" src="./img/wx78.jpg" />
             <div class="text">Placehodler text</div>
           </div>
 
           <div class="card3">
-            <img src="./img/wx78.jpg" />
+            <img class="cardimg" src="./img/wx78.jpg" />
             <div class="text">Placehodler text</div>
           </div>
 
           <div class="card4">
-            <img src="./img/wx78.jpg" />
+            <img class="cardimg" src="./img/wx78.jpg" />
             <div class="text">Placehodler text</div>
           </div>
         </div>
